<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.comp3617.finalProject.ui.fragments.AddGroupFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_group_title" />

    <EditText
        android:id="@+id/id_group_title_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/s_title"
        android:inputType="textPersonName"
        android:autofillHints="test" />

    <TextView
        android:id="@+id/id_dateTtile_addGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/length_of_trip" />

    <ImageView
        android:id="@+id/id_datePicker_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/icon"
        android:src="@drawable/ic_baseline_calendar_today_24" />

    <TextView
        android:id="@+id/id_date_chosen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/id_save_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/save" />

</LinearLayout>