<?xml version="1.0" encoding="utf-8"?>
<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:fillViewport="true"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context="com.comp3617.finalProject.ui.fragments.AddBlockFragment">-->

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.comp3617.finalProject.ui.fragments.AddBlockFragment">

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="vertical">-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_block" />

            <ImageView
                android:id="@+id/id_edit_addBlock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/iconDescription"
                android:src="@drawable/ic_baseline_edit_24"
                android:visibility="invisible" />
        </LinearLayout>

        <EditText
            android:id="@+id/id_title_addBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/the_title"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <EditText
            android:id="@+id/id_duration_addBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hour"
            android:inputType="numberDecimal"
            android:autofillHints="" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/id_description_addBlock"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/quantum_white_100"
                android:hint="@string/description" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/id_iconBtn_addBlock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon" />

            <com.google.android.material.chip.Chip
                android:id="@+id/id_chipIcon_addBlock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:visibility="invisible"
                app:chipIconEnabled="true"
                app:closeIconEnabled="true"
                app:closeIconVisible="true" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="100dp">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/autocomplete_fragment"
                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="autocompleteFragment" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/id_multipleBtn_addBlock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_multiple" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/id_cancel_addBlock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:visibility="invisible" />

            <Button
                android:id="@+id/id_save_btn_addBlock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save" />

        </LinearLayout>

    </LinearLayout>
<!--</ScrollView>-->