<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context="com.comp3617.finalProject.ui.AddNewActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addNewActivityTitle" />

    <!--    <ImageButton-->
    <!--        android:id="@+id/id_back_addActivity"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />-->

    <ImageView
        android:id="@+id/id_back_addActivity"
        style="@style/ClickableImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/iconDescription"
        android:padding="8dp"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

    <RadioGroup
        android:id="@+id/id_add_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/id_radioBtn_addGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/group" />

        <RadioButton
            android:id="@+id/id_radioBtn_addBlock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/block" />
    </RadioGroup>

    <include
        layout="@layout/navhost_addnew"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:layout_editor_absoluteX="1dp" />

</LinearLayout>